Finish layout, adding social icons, etc

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,8 +18,22 @@ menu:
       url: "/talks/"
       weight: 1
 
-socialIcons:
-  - name: "kofi"
-    url: "https://kofi.com"
-  - name: "x"
-    url: "https://x.com"
+params:
+  profileMode:
+    enabled: true
+    title: "Welcome 👋" # optional default will be site title
+    subtitle: "To my professional site"
+    imageUrl: "<image link>" # optional
+    imageTitle: "Ryan Randall headshot" # optional
+    imageWidth: 120
+    imageHeight: 120
+  socialIcons: # optional
+    - name: "github"
+      url: "https://github.com/kocobee"
+    - name: "twitter"
+      url: "https://x.com/kocobee_"
+    - name: "linkedin"
+      url: "https://www.linkedin.com/in/ryan-r-458363248/"
+    - name: "email"
+      url: "https://x.com/kocobee_"
+
